# Collect

./: .env.example  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
api/v1/: mixins.py  paginations.py  permissions.py  urls.py
api/v1/collects/: serializers.py  swagger.py  views.py
api/v1/payments/: serializers.py  swagger.py  views.py
api/v1/users/: serializers.py  swagger.py  views.py
collects/: apps.py  constatns.py  models.py  signals.py  tasks.py
collects/migrations/: 0001_initial.py  0002_initial.py
config/: celery.py  settings.py  urls.py
docker/: Dockerfile
payments/: apps.py  constatns.py  models.py  services.py  signals.py  tasks.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_payment_collect.py
tests/: conftest.py  test_00_user.py  test_01_collect.py  test_02_payment.py
tests/fixture/: fixture_collect.py  fixture_payment.py  fixture_user.py
users/: constants.py  models.py
users/management/commands/: create_su.py  populate_db.py
users/migrations/: 0001_initial.py
utils/: utils.py
